# ConTopo

./: .dockerignore  .env.secrets.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE_ANALYSIS.md  Dockerfile  README.md  activate_env.sh  apptainer.def  bench_time.py  check_split_overlap.py  compare_val_loss_acc.py  connect_ssh_marimo.sh  connect_ssh_mlflow.sh  docker-entrypoint.sh  dryplan.md  environment.yml  exp_RSA.py  exp_actmaps.py  exp_combinatorial.py  exp_diversity.py  exp_errorcorr.py  exp_generateRDM.py  exp_similarityprofiles.py  exp_train_adapters.py  exp_tsne.py  launch_mlflow_ui.sh  launch_mlflow_ui_container.sh  launch_mlflow_ui_from_host.sh  launch_sweep.sh  main.py  main_ce.py  main_coscontr.py  main_supcon.py  mlflow_ui.sh  new_notebooks.md  pending.md  plan.md  pyproject.toml  (+6 more)
conf/: config.yaml
conf/adapter/: default.yaml
conf/analysis/: default.yaml
conf/dataset/: cifar10.yaml  flowers102.yaml  imagenet100.yaml
conf/dry_filter/: default.yaml
conf/ensemble/: ce_ensembles.yaml  dynamic.yaml  full_sweep.yaml  grid_rho_grouped.yaml  small_grid.yaml
conf/execution/: default.yaml
conf/groups/: default.yaml  mc_example.yaml  samples3.yaml  samples9.yaml  samples9_mc.yaml  samples9_small.yaml  small.yaml
conf/loss/: cross_entropy.yaml  topoloss.yaml
conf/mlflow/: default.yaml  notebook.yaml
conf/model/: meta_head.yaml  resnet18.yaml  resnet34_imagenet100.yaml  resnet34_scratch.yaml  simple_cnn.yaml
conf/pipeline/: default.yaml  default_ens9.yaml  diff_val_loss.yaml  small.yaml  small_test.yaml
conf/profiling/: default.yaml  flowers102.yaml  imagenet100.yaml
conf/runtime/: default.yaml
conf/sweeps/: cifar10_t10.yaml  cifar10_t20.yaml  cifar10_t20_reduced.yaml  cifar10_torus_t1.yaml  cifar10_torus_t10.yaml  cifar10_torus_t5.yaml  cifar10_valloss_t10.yaml  dev_ffcv_smoke.yaml  dev_smoke.yaml  dev_smoke_t10.yaml  dev_smoke_topoloss.yaml  flowers102_t5.yaml  imagenet100_ffcv_t10.yaml  imagenet100_ffcv_t1_16ep.yaml  imagenet100_ffcv_t5.yaml  imagenet100_paper_t5.yaml  imagenet100_t10.yaml  imagenet100_t5.yaml  metalearning.yaml  metalearning_small.yaml  metalearning_stage1.yaml  metalearning_stage2.yaml  metalearning_stage3.yaml  search_rho_coarse.yaml  search_rho_fine.yaml  search_rho_finest.yaml  training_rho.yaml  training_rho_6.yaml  training_rho_half.yaml  training_rho_imagenet100.yaml  training_rho_imagenet100_ffcv.yaml  training_rho_loss.yaml  training_rho_loss_stop.yaml  training_rho_tiny.yaml  training_search_minrho.yaml  training_search_minrho_finer.yaml  training_search_minrho_finest.yaml  training_small.yaml  training_small_10.yaml  training_small_ffcv_cifar.yaml  (+6 more)
conf/training/: default.yaml
configs/: diversity.yaml  ensembles copy.yaml  ensembles.yaml  env.py  experiments_cross_entropy_fast.json  experiments_cross_entropy_fast_comp.json  experiments_cross_entropy_fast_torus.json  experiments_cross_entropy_fast_torus_comp.json  experiments_cross_entropy_torus.json  experiments_cross_entropy_torus_grid.json  test_combinatorial.yaml
docs/: ANALYSIS_CONSOLIDATED_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING_AND_UPDATING.md  README.md  adding_datasets.md  analysis_guide.md  architecture.md  artifact_storage.md  config_system.md  contributing.md  doc_drift_report.md  dry_run_models.md  ffcv_param_assumptions.md  idempotency.md  install_opencv_ffcv.md  migration_system.md  telemetry_schema.md  topoloss_param_assumptions.md  training.md  typing.md
losses/: topographic.py
notebooks/: acc_vs_rho.py  accuracy_val_loss_vs_val_acc.py  activation_maps.py  analysis_diversity.py  analysis_metalearner.py  analysis_profiles_comparison.py  check_similarity.py  combinatorial_analysis.py  compare_diversity.ipynb  compare_groups_accuracy.py  consistency_vs_rho.py  debug_setup_timing.py  embedding_similarity_vs_rho.py  embedding_tsne.py  ensemble_accuracy_vs_rho.py  ensemble_consistency.py  ensemble_diagnostics_vs_rho.py  ensemble_samples_accuracy.py  ensemble_tradeoffs.py  explore_adapters.py  explore_rdm.py  finegrained_rho.py  loss_trajectories_by_rho.py  manual_confirmation_simprof_new.py  metalearners.py  mlflow_helpers.py  model_diagnostics_vs_rho.py  mysimprof.py  per_class_accuracy_vs_rho.py  rho_vs_moran.py  simprof.py  single_models_accuracy.py
notebooks/.ipynb_checkpoints/: polar_pairwise_diversity-checkpoint.ipynb
notebooks/less_old_ones/: check_similarity.py  compare_behaviour.py  compare_diversity.ipynb  consistency_explore.ipynb  diversity_consistency_correlation.ipynb  diversity_consistency_correlation_all_rhos.ipynb  ensemble_correlation_analysis.ipynb  explore_adapters.py  explore_diversity.py  explore_mlruns.py  explore_rdm.py  explore_results.py  new_diversity.ipynb  polar_pairwise_diversity.ipynb  prof_analysis.ipynb  update_notebook.py
notebooks/mlflow/: acc_vs_rho.py  (+15 more)
old_scripts/: activate_env.sh  launch_mlflow_ui_from_host.sh  run_pipeline.sh  setup_env.sh
old_uv_project/: .apptainerignore
scripts/: 00_migrate_existing.py  01_dry_run_models.py  01_train_models.py  02_cache_inference.py  03_compute_profiles.py  03b_compute_diagnostics.py  04_dry_run_ensemble.py  04_run_ensemble.py  04b_compute_diversity.py  04c_compute_consistency.py  05_train_adapters.py  06_migrate_mlflow_schema.py  activate-ffcv-env.sh  debug_identity_hash.py  inspect_and_rehash_model_identity.py  migrate_early_stopping_method.py  migrate_mlflow_paths.py  migrate_model_identity_hashes.py  mlflow_gc.py
src/: __init__.py  inference.py  mlflow_schema_logger.py  mlflow_utils.py  types.py
tests/: test_adapter_registry.py  test_adapter_training.py  test_anchor_determinism.py  test_cache_alignment.py  test_category_similarity.py  test_cfg_hash.py  test_diagnostics_split_identity.py  test_discovery_cfg_driven.py  test_ensemble.py  test_hydra_config.py  test_idempotency_registry.py  test_mlflow_artifact_cache.py  test_profile_gating.py  test_profile_masking.py  test_training_config_validation.py
utils/: ensemble_combination.py  ensemble_utils.py  env.py  experiments.py  load.py  metric_registry.py  metrics.py  names.py  run_inference.py
(+94 files in other folders)
