[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contopo"
version = "0.1.0"
description = "Topographic representations in neural networks — CE training, profiling, ensembles"
requires-python = ">=3.13"
dependencies = [
    "torch==2.7.0",
    "torchvision==0.22.0",
    "pillow",
    "pandas",
    "mlflow",
    "scikit-learn",
    "hydra-core==1.3.2",
    "omegaconf==2.3.0",
    "boto3==1.42.80",
]

[dependency-groups]
analysis = [
    "matplotlib",
    "plotly",
    "ipython==8.28.0",
    "jupyter==1.0.0",
    "polars==1.12.0",
]
dev = [
    "pytest==9.0.2",
    "pytest-cov",
]
sky = [
    "skypilot-nightly[runpod]",
]
ffcv = [
    # FFCV high-throughput data loading backend for large-image datasets (e.g. ImageNet100).
    # Install with: uv sync --group ffcv
    # See docs/ffcv_param_assumptions.md for migration notes.
    "ffcv",
    # Antialiased downsampling (blurpool) — used when training.use_blurpool=true.
    "antialiased-cnns",
    # GPU-side normalization in FFCV pipelines (NormalizeImage on CUDA requires cupy).
    # Match the CUDA version: cupy-cuda12x for CUDA 12.x.
    "cupy-cuda12x",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.setuptools.packages.find]
include = ["src*", "conf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
